# Near-nft-stacking-contract

./: README.md
FT/res/: defi.wasm  fungible_token.wasm
NFT/: Cargo.toml
NFT/neardev/: dev-account  dev-account.env
NFT/res/: approval_receiver.wasm  non_fungible_token.wasm  token_receiver.wasm
NFT/res/neardev/: dev-account  dev-account.env
Staking/: Cargo.toml
Staking/res/: cross_contract_high_level.wasm
Staking/src/: lib.rs
Staking/tests/: general.rs  sim.rs
